--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
